# gmail-mcp

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
scripts/: start.sh  test.sh
scripts/docker/: setup.sh  start.sh
src/app/: gmail_mcp_server.py  main.py  oauth.py  test.py
